--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,17 +1,3 @@
-/**
- * Positioning Activity Solution (CSS)
- *
- * Note: In this activity, students will be creating these files from scratch.
- * This file is provided for you to guide your class after they finish the assignment.
- * Review this so you know exactly what you'll be showing your students
- **/
-
-
-/** {*/
-  /*box-sizing: border-box;*/
-  /*text-align: left;*/
-  /*}*/
-
 * {
         margin: 0;
         padding: 0;
@@ -104,13 +90,11 @@ right:270px;
 
 
 
-
 .entire {
     position: relative;
     margin-top:100px;
     margin-left: 32px;
     margin-right: 32px;
-    background: green;
 	width: 100%;
 ;
 
@@ -124,7 +108,7 @@ right:270px;
   position: absolute;
 
 }
-.about-me {
+.contact {
    top:0;
    left:0;
    background: white;
@@ -135,17 +119,7 @@ right:270px;
 
 }
 
-#bio-image {
-    float:left;
-    height:400px;
-    width:300px;
-    margin-right:30px;
 
-}
-
-#text-content {
-	float:left;
-}
 
 
 .connect-with-me {
@@ -202,4 +176,34 @@ h3 {
 	color:#4aaaa5;    
 	font-size:26px;
 
+}
+
+input[type=text], select, textarea {
+    width: 100%;
+    padding: 12px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    box-sizing: border-box;
+    margin-top: 6px;
+    margin-bottom: 16px;
+    resize: vertical;
+}
+
+input[type=submit] {
+    background-color: #4CAF50;
+    color: white;
+    padding: 12px 20px;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+input[type=submit]:hover {
+    background-color: #45a049;
+}
+
+.container {
+    border-radius: 5px;
+    background-color: #f2f2f2;
+    padding: 20px;
 }
