--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -1,16 +1,4 @@
-/**
- * Positioning Activity Solution (CSS)
- *
- * Note: In this activity, students will be creating these files from scratch.
- * This file is provided for you to guide your class after they finish the assignment.
- * Review this so you know exactly what you'll be showing your students
- **/
-
-
-/** {*/
-  /*box-sizing: border-box;*/
-  /*text-align: left;*/
-  /*}*/
+/*style 3*/
 
 * {
         margin: 0;
@@ -104,13 +92,11 @@ right:270px;
 
 
 
-
 .entire {
     position: relative;
     margin-top:100px;
     margin-left: 32px;
     margin-right: 32px;
-    background: green;
 	width: 100%;
 ;
 
@@ -124,7 +110,7 @@ right:270px;
   position: absolute;
 
 }
-.about-me {
+.port {
    top:0;
    left:0;
    background: white;
@@ -135,17 +121,7 @@ right:270px;
 
 }
 
-#bio-image {
-    float:left;
-    height:400px;
-    width:300px;
-    margin-right:30px;
 
-}
-
-#text-content {
-	float:left;
-}
 
 
 .connect-with-me {
