--- a/assets/css/style3.css
+++ b/assets/css/style3.css
@@ -1,33 +1,20 @@
-/*style 3*/
-
-* {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        outline: 0;
-        font-size: 100%;
-        vertical-align: baseline;
-        background: transparent;
-          box-sizing: border-box;
-  text-align: left;
-    }
+/*style 3 is for formatting portfolio page*/
 
 body {
   font-family: 'Arial', Helvetica Neue, Helvetica, serif;
   font-size: 20px;
   line-height: 40px;
   color: #333;
-  background: grey;
-  }
+  background-image: url("../images/nice_snow.png");
+}
 
 .header {
-	  overflow: auto;
-      clear: both;
-	  position: absolute;
-	    margin-bottom: 40px;
-
-
+	overflow: auto;
+  clear: both;
+	position: absolute;
+	margin-bottom: 40px;
 }
+
 .name {
   position: fixed;
 top:0;
@@ -59,10 +46,34 @@ top:0;
   background: white;
     margin-bottom: 40px;
 
-
     z-index: 1;
 
 }
+
+
+
+.tabs {
+           position:fixed;
+            right:32px;
+         z-index: 3;
+            top:0;
+           font-size: 20px;
+           color:grey;
+}
+
+ul {
+    list-style-type: none;
+    margin: 20px;
+    padding: 0;
+        display: inline-block;
+
+}
+
+li {
+    display: inline-block;
+}
+
+
 
 
 .btn {
@@ -135,27 +146,29 @@ right:270px;
 }
 
 
+
 #github {
-	height: 60px;
+  height: 60px;
     width: 60px;
     margin-top: 30px;
+
 }
 
 #linkedln {
-	height: 60px;
+  height: 60px;
     width: 60px;
-        margin-top: 30px;
-
+    margin-top: 30px;
+    margin-left:20px;
 }
 
 #stack {
-	height: 56px;
-    width: 56px;
-        margin-top: 30px;
-
+  height: 60px;
+    width: 60px;
+    margin-top: 30px;
+    margin-left:20px;
 }
 
-
+hr { width:100%; height:1px; background: #fff }
 
 
 #Connect-with-me {
