--- a/assets/css/style2.css
+++ b/assets/css/style2.css
@@ -1,31 +1,20 @@
-* {
-        margin: 0;
-        padding: 0;
-        border: 0;
-        outline: 0;
-        font-size: 100%;
-        vertical-align: baseline;
-        background: transparent;
-          box-sizing: border-box;
-  text-align: left;
-    }
+/*style 2 is for formatting contact page*/
 
 body {
   font-family: 'Arial', Helvetica Neue, Helvetica, serif;
   font-size: 20px;
   line-height: 40px;
   color: #333;
-  background: grey;
-  }
+  background-image: url("../images/nice_snow.png");
+}
 
 .header {
-	  overflow: auto;
-      clear: both;
-	  position: absolute;
-	    margin-bottom: 40px;
-
-
+	overflow: auto;
+  clear: both;
+	position: absolute;
+	margin-bottom: 40px;
 }
+
 .name {
   position: fixed;
 top:0;
@@ -60,6 +49,27 @@ top:0;
 
     z-index: 1;
 
+}
+
+.tabs {
+           position:fixed;
+            right:32px;
+         z-index: 3;
+            top:0;
+           font-size: 20px;
+           color:grey;
+}
+
+ul {
+    list-style-type: none;
+    margin: 20px;
+    padding: 0;
+        display: inline-block;
+
+}
+
+li {
+    display: inline-block;
 }
 
 
@@ -134,23 +144,24 @@ right:270px;
 
 
 #github {
-	height: 60px;
+  height: 60px;
     width: 60px;
     margin-top: 30px;
+
 }
 
 #linkedln {
-	height: 60px;
+  height: 60px;
     width: 60px;
-        margin-top: 30px;
-
+    margin-top: 30px;
+    margin-left:20px;
 }
 
 #stack {
-	height: 56px;
-    width: 56px;
-        margin-top: 30px;
-
+  height: 60px;
+    width: 60px;
+    margin-top: 30px;
+    margin-left:20px;
 }
 
 
